crates/ao-tui/tests/snapshots/test_create_dialog__create_dialog_candidate_at_last.snap
---
source: crates/ao-tui/tests/test_create_dialog.rs
expression: output
---
" AspireOrchestrator (Rust)                                                      "
"┌ Slots ───────────────────┐┌ Details ─────────────────────────────────────────┐"
"│                          ││ No slot selected                                 │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│               ┌ New Slot ────────────────────────────────────┐               │"
"│               │                                              │               │"
"│               │ Source Repository:                           │               │"
"│               │ ──────────────────────────────────────────── │───────────────┘"
"│               │                                              │───────────────┐"
"│               │ Prompt (optional):                           │               │"
"│               │                                              │               │"
"│               │                                              │               │"
"│               │ ──────────────────────────────────────────── │               │"
"│               │                                              │               │"
"│               │  Up/Down navigate  Enter select  Esc cancel  │               │"
"│               │                                              │               │"
"│               └──────────────────────────────────────────────┘               │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
"                                                                                "
"[N]ew [S]tart [K]ill [D]estroy [A]gent [R]ebase [G]push [P]op-in [L]og [?]help ["
