crates/ao-tui/tests/snapshots/test_create_dialog__create_dialog_prompt_with_text.snap
---
source: crates/ao-tui/tests/test_create_dialog.rs
expression: output
---
" AspireOrchestrator (Rust)                                                      "
"┌ Slots ───────────────────┐┌ Details ─────────────────────────────────────────┐"
"│                          ││ No slot selected                                 │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│               ┌ New Slot ────────────────────────────────────┐               │"
"│               │                                              │               │"
"│               │ Source Repository:                           │               │"
"│               │ ──────────────────────────────────────────── │───────────────┘"
"│               │                                              │───────────────┐"
"│               │ Prompt (optional):                           │               │"
"│               │  fix the login bug                           │               │"
"│               │                                              │               │"
"│               │ ──────────────────────────────────────────── │               │"
"│               │                                              │               │"
"│               │  Tab switch field  Enter create  Esc cancel  │               │"
"│               │                                              │               │"
"│               └──────────────────────────────────────────────┘               │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
"                                                                                "
"[N]ew [S]tart [K]ill [D]estroy [A]gent [R]ebase [G]push [P]op-in [L]og [M]ultipl"
